<resources>
    <string name="app_name">RK University</string>
    <string name="todo">TODO</string>
    <string name="department_of_computer_engineering_is_established_in_year_2006_the_department_offers_btech_and_mtech_programs_in_computer_engineering_the_department_also_offers_phd_program_in_computer_engineering_since_its_inception_btech_ce_program_was_offered_with_intake_of_60_present_intake_is_120">Department of Computer Engineering is established in year 2006. The department offers BTech and MTech programs in computer engineering.The department also offers PhD program in Computer Engineering. Since its inception, BTech(CE) program was offered with intake of 60. Present intake is 120.</string>
    <string name="todo1">TODO</string>
    <string name="contact_us">Contact Us</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="holistic_education_in_engineering_and_technology_identifying_and_solving_real_life_problem_for_the_betterment_of_society_capability_of_analysis_creativity_in_concurrence_with_best_industry_practices_ambience_for_effective_communication_and_ethical_practice_in_increasingly_competitive_environment">Holistic education in engineering and technology identifying and solving real life problem for the betterment of society.Capability of analysis, creativity in concurrence with best industry practices. Ambience for effective communication and ethical practice in increasingly competitive environment.</string>
</resources>